--- a/app/src/main/res/layout-land/activity_play_juegos_land.xml
+++ b/app/src/main/res/layout-land/activity_play_juegos_land.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    tools:ignore="MissingDefaultResource">
 
     <TableLayout
         android:layout_width="match_parent"
@@ -14,8 +14,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/textView"
