--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -18,7 +18,7 @@
             android:layout_marginStart="20dp"
             android:hint="Elige una opcion:"
             android:inputType="text"
-            android:textSize="30"
+            android:textSize="30dp"
             tools:ignore="HardcodedText,TextViewEdits" />
     </TableRow>
 
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:text="Angry Birds"
-                android:textSize="20" />
+                android:textSize="20dp" />
 
             <RadioButton
                 android:id="@+id/radioButton2"
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:text="Dragon Fly"
-                android:textSize="20" />
+                android:textSize="20dp" />
 
             <RadioButton
                 android:id="@+id/radioButton3"
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:text="Hill Climbing Racing"
-                android:textSize="20" />
+                android:textSize="20dp" />
 
             <RadioButton
                 android:id="@+id/radioButton4"
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:text="Pocket Soccer"
-                android:textSize="20" />
+                android:textSize="20dp" />
 
             <RadioButton
                 android:id="@+id/radioButton5"
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:text="Radiant Defense"
-                android:textSize="20" />
+                android:textSize="20dp" />
         </RadioGroup>
     </TableRow>
 
@@ -79,7 +79,7 @@
         android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="35dp"
+        android:layout_marginHorizontal="30dp"
         android:numStars="7" />
 
     <SeekBar
@@ -87,15 +87,16 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:layout_marginHorizontal="15dp"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:max="7"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab0"
+        android:id="@+id/fab"
         android:layout_marginTop="70dp"
-        android:layout_marginLeft="320"
+        android:layout_marginLeft="320dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/telefono"
+        app:srcCompat="@mipmap/camara"
         app:fabSize="normal" />
 
 </TableLayout>
