--- a/app/src/main/res/layout/activity_new_player.xml
+++ b/app/src/main/res/layout/activity_new_player.xml
@@ -11,13 +11,12 @@
         tools:context=".NewPlayer">
 
         <TableRow android:layout_marginVertical="5dp">
-
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
-                tools:srcCompat="@mipmap/guest" />
+                tools:srcCompat="@drawable/pfpic" />
 
 
             <com.google.android.material.textfield.TextInputLayout
@@ -99,7 +98,7 @@
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginRight="10dp"
-                tools:srcCompat="@mipmap/android" />
+                tools:srcCompat="@drawable/android" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/bt"
@@ -120,7 +119,7 @@
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginRight="10dp"
-                tools:srcCompat="@drawable/telefono" />
+                tools:srcCompat="@drawable/phone" />
 
             <EditText
                 android:id="@+id/edText4"
@@ -138,9 +137,10 @@
             android:layout_marginVertical="5dp">
 
             <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_column="2" />
+                android:id="@+id/spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="2"/>
         </TableRow>
 
         <TableRow
@@ -154,7 +154,7 @@
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginRight="10dp"
-                tools:srcCompat="@drawable/correo" />
+                tools:srcCompat="@drawable/mail" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/TiLayout"
