--- a/app/src/main/res/layout/activity_new_player.xml
+++ b/app/src/main/res/layout/activity_new_player.xml
@@ -16,7 +16,7 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
-                tools:srcCompat="@drawable/pfpic" />
+                android:src="@drawable/pfpic" />
 
 
             <com.google.android.material.textfield.TextInputLayout
@@ -90,7 +90,9 @@
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginRight="10dp"
-                tools:srcCompat="@drawable/camara" />
+
+                />
+            <!--android:src="@drawable/camara"-->
 
             <ImageView
                 android:id="@+id/imageView3"
@@ -98,7 +100,7 @@
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginRight="10dp"
-                tools:srcCompat="@drawable/android" />
+                android:src="@drawable/android" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/bt"
@@ -119,7 +121,7 @@
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginRight="10dp"
-                tools:srcCompat="@drawable/phone" />
+                android:src="@drawable/phone" />
 
             <EditText
                 android:id="@+id/edText4"
@@ -154,7 +156,7 @@
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginRight="10dp"
-                tools:srcCompat="@drawable/mail" />
+                android:src="@drawable/mail" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/TiLayout"
