--- a/app/src/main/res/layout/activity_generos.xml
+++ b/app/src/main/res/layout/activity_generos.xml
@@ -6,184 +6,102 @@
     android:layout_height="match_parent"
     tools:context=".generos">
 
-    <androidx.core.widget.NestedScrollView
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/textView"
+            style="@style/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Plataformas:"
+            android:textSize="25dp" />
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/chip_group"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            app:singleSelection="true">
 
-            <TextView
-                android:id="@+id/textView"
-                style="@style/textView"
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip"
+                style="@style/Widget.MaterialComponents.Chip.Filter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginBottom="10dp"
-                android:text="Plataformas:"
-                android:textSize="25dp" />
+                android:text="PS4"
+                android:textAppearance="?android:textAppearanceMedium" />
 
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/chip_group"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                app:singleSelection="true">
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip"
-                    style="@style/Widget.MaterialComponents.Chip.Filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="PS4"
-                    android:textAppearance="?android:textAppearanceMedium" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip2"
-                    style="@style/Widget.MaterialComponents.Chip.Filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="PC"
-                    android:textAppearance="?android:textAppearanceMedium" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip3"
-                    style="@style/Widget.MaterialComponents.Chip.Filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="XBOX"
-                    android:textAppearance="?android:textAppearanceMedium" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip4"
-                    style="@style/Widget.MaterialComponents.Chip.Filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="WII"
-                    android:textAppearance="?android:textAppearanceMedium" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip5"
-                    style="@style/Widget.MaterialComponents.Chip.Filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="WIIU"
-                    android:textAppearance="?android:textAppearanceMedium" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip6"
-                    style="@style/Widget.MaterialComponents.Chip.Filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="3DS"
-                    android:textAppearance="?android:textAppearanceMedium" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip7"
-                    style="@style/Widget.MaterialComponents.Chip.Filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="X360"
-                    android:textAppearance="?android:textAppearanceMedium" />
-            </com.google.android.material.chip.ChipGroup>
-
-            <TextView
-                android:id="@+id/textView2"
-                style="@style/textView"
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip2"
+                style="@style/Widget.MaterialComponents.Chip.Filter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginBottom="10dp"
-                android:text="Generos:"
-                android:textSize="25dp" />
+                android:text="PC"
+                android:textAppearance="?android:textAppearanceMedium" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/mb1"
-                android:layout_width="match_parent"
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip3"
+                style="@style/Widget.MaterialComponents.Chip.Filter"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
-                android:gravity="start"
-                android:hint="Accion"
-                android:inputType="text" />
+                android:text="XBOX"
+                android:textAppearance="?android:textAppearanceMedium" />
 
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/mb2"
-                android:layout_width="match_parent"
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip4"
+                style="@style/Widget.MaterialComponents.Chip.Filter"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
-                android:gravity="start"
-                android:hint="Aventura"
-                android:inputType="text" />
+                android:text="WII"
+                android:textAppearance="?android:textAppearanceMedium" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/mb3"
-                android:layout_width="match_parent"
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip5"
+                style="@style/Widget.MaterialComponents.Chip.Filter"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
-                android:gravity="start"
-                android:hint="Deportes"
-                android:inputType="text" />
+                android:text="WIIU"
+                android:textAppearance="?android:textAppearanceMedium" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/mb4"
-                android:layout_width="match_parent"
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip6"
+                style="@style/Widget.MaterialComponents.Chip.Filter"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
-                android:gravity="start"
-                android:hint="Disparos"
-                android:inputType="text" />
+                android:text="3DS"
+                android:textAppearance="?android:textAppearanceMedium" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/mb5"
-                android:layout_width="match_parent"
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip7"
+                style="@style/Widget.MaterialComponents.Chip.Filter"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
-                android:gravity="start"
-                android:hint="Estrategia"
-                android:inputType="text" />
+                android:text="X360"
+                android:textAppearance="?android:textAppearanceMedium" />
+        </com.google.android.material.chip.ChipGroup>
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/mb6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
-                android:gravity="start"
-                android:hint="Lucha"
-                android:inputType="text" />
+        <TextView
+            android:id="@+id/textView2"
+            style="@style/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Generos:"
+            android:textSize="25dp" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/mb7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
-                android:gravity="start"
-                android:hint="Musical"
-                android:inputType="text" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="400dp" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/mb8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
-                android:gravity="start"
-                android:hint="Rol"
-                android:inputType="text" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/mb9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
-                android:gravity="start"
-                android:hint="Simulacion"
-                android:inputType="text" />
-
-
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+    </LinearLayout>
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar"
